--- a/src/main/webapp/app/layouts/menubar/menubar.html
+++ b/src/main/webapp/app/layouts/menubar/menubar.html
@@ -64,16 +64,16 @@
                             <div class="divider"></div>
                         </li>
                               <li ui-sref-active="active">
-                                <a ui-sref="mouvement" ng-click="vm.collapseNavbar()">
+                                <a ui-sref="mouv" ng-click="vm.collapseNavbar()">
                                     <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
-                                    <span data-translate="">Bon de Commande</span>
+                                    <span data-translate="">Commande</span>
                                 </a>
                             <div class="divider"></div>
                         </li>
                               <li ui-sref-active="active">
                                 <a ui-sref="mouvement" ng-click="vm.collapseNavbar()">
                                     <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
-                                    <span data-translate="">Commande</span>
+                                    <span data-translate="">Liste Commande</span>
                                 </a>
                             <div class="divider"></div>
                         </li>
