--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -140,6 +140,12 @@
                                     <span data-translate="global.menu.entities.typeSortieArticle">Type Sortie Article</span>
                                 </a>
                             </li> -->
+                        <li ui-sref-active="active">
+                                <a ui-sref="custom-user" ng-click="vm.collapseNavbar()">
+                                    <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
+                                    <span data-translate="global.menu.entities.customUser">Custom User</span>
+                                </a>
+                            </li>
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                <!--      </ul>
                 </li> -->
