--- a/src/main/webapp/app/layouts/menubar/menubar.html
+++ b/src/main/webapp/app/layouts/menubar/menubar.html
@@ -137,22 +137,22 @@
                             <li ui-sref-active="active">
                                 <a ui-sref="facture" ng-click="vm.collapseNavbar()">
                                     <i class="fa fa-building" aria-hidden="true"></i>
-                                    <span data-translate="">Facture</span>
+                                    <span data-translate="">Liste des Factures</span>
                                 </a>
                                 <div class="divider"></div>
                             </li>
-                            <li ui-sref-active="active">
+<!--                             <li ui-sref-active="active">
                                 <a ui-sref="ligne-sortie-article" ng-click="vm.collapseNavbar()">
                                     <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
                                     <span data-translate="">Ligne-Sortie</span>
                                 </a>
                                 <div class="divider"></div>
-                            </li>
+                            </li> -->
 
                             <li ui-sref-active="active">
                                 <a ui-sref="sortie-article" ng-click="vm.collapseNavbar()">
                                     <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
-                                    <span data-translate="">sortie</span>
+                                    <span data-translate="">Liste des ventes </span>
                                 </a>
 
                             </li>
